--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.1.1",
+    "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
