--- a/api/package.json
+++ b/api/package.json
@@ -26,13 +26,17 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.1.1",
+    "@types/multer-s3": "^3.0.0",
+    "aws-sdk": "^2.1450.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "multer-s3": "^3.0.1",
     "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
