--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.16.0",
+    "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
   },
