--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,19 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
+    "react-number-format": "^5.3.1",
     "react-router-dom": "^6.16.0",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
