--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,16 @@
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-currency-input-field": "^3.6.11",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.3.0",
     "react-number-format": "^5.3.1",
     "react-router-dom": "^6.16.0",
     "swiper": "^10.3.1",
